--- a/spark3-pieces.scala/spark-apps/src/test/resources/log4j2.properties
+++ b/spark3-pieces.scala/spark-apps/src/test/resources/log4j2.properties
@@ -33,8 +33,15 @@ appender.console.target = SYSTEM_ERR
 appender.console.layout.type = PatternLayout
 #appender.console.layout.pattern = %d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n%ex
 # https://logging.apache.org/log4j/2.x/manual/pattern-layout.html
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} - %processId/%threadId %threadName - %p - %c{1} - %m%n%ex
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} - %processId/%threadId %threadName - %p - %c{1.2.*} - %m%n%ex
 #appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} - %p - %c{1} - [pid %X{PID}] - %m%n%ex
+
+# For deploying Spark ThriftServer
+# SPARK-34128: Suppress undesirable TTransportException warnings involved in THRIFT-4805
+appender.console.filter.1.type = RegexFilter
+appender.console.filter.1.regex = .*Thrift error occurred during processing of message.*
+appender.console.filter.1.onMatch = deny
+appender.console.filter.1.onMismatch = neutral
 
 # Set the default spark-shell/spark-sql log level to WARN. When running the
 # spark-shell/spark-sql, the log level for these classes is used to overwrite
@@ -72,19 +79,11 @@ logger.RetryingHMSHandler.level = fatal
 logger.FunctionRegistry.name = org.apache.hadoop.hive.ql.exec.FunctionRegistry
 logger.FunctionRegistry.level = error
 
-# For deploying Spark ThriftServer
-# SPARK-34128: Suppress undesirable TTransportException warnings involved in THRIFT-4805
-appender.console.filter.1.type = RegexFilter
-appender.console.filter.1.regex = .*Thrift error occurred during processing of message.*
-appender.console.filter.1.onMatch = deny
-appender.console.filter.1.onMismatch = neutral
-
 # Debug Catalyst CodeGen
 #org.apache.spark.sql.catalyst.expressions.codegen.CodeGenerator=DEBUG
 #org.apache.spark.sql.catalyst.expressions=WARN
-#org.apache.spark.sql.catalyst.vasnake=WARN
-logger.catalyst.name = org.apache.spark.sql.catalyst
 logger.catalyst.level = warn
+logger.catalyst.name = org.apache.spark.sql.catalyst
 
-logger.vasnake.name = com.github.vasnake
 logger.vasnake.level = debug
+logger.vasnake.name = com.github.vasnake
